2003-01-07  Rafal Marcin Lewczuk <rlewczuk@pronet.pl>
	* Moving files between different directories on the same volume 
	  changes group of moved items if necessary (SGID bit set)

2003-01-04  Joe Marcus Clarke <marcus@marcuscom.com>
	* Add a doc/README.cnid which talks about the CNID calculation
	  and persistence scheme.
	* Change all references to db3/DB3 to BDB since we now support
	  Berkeley DB3 and DB4.
	* Add DB 4.1.x support.

2002-09-26  Andrew Morgan <morgan@orst.edu>
	* Added syncmail script to CVSROOT so commits are logged to the
	netatalk-cvs@lists.sourceforge.net mailing list.  You can subscribe
	to this mailing list to keep track of cvs commits.

2002-09-24  Sebastian Rittau  <srittau@jroger.in-berlin.de>

	* NEWS: Catted CHANGES to the end of this file. Updated from the
	stable branch.
	* CHANGES: Removed.

2002-02-14  andy m <morgan@orst.edu>
	* etc/papd/queries.c: Added support for "ADOIsBinaryOK?" printer query
	to papd.  We now respond with "True" instead of "unknown".

2002-02-09  joe c  <marcus@marcuscom.com>
	* etc/afpd/afp_options.c: Redo the -server_notif flag.  Now, server
	notifications are enabled by default, and specifying the -client_polling
	flag will disable them.

2002-02-06  joe c  <marcus@marcuscom.com>
	* etc/afpd/globals.h, etc/afpd/afp_options.c, etc/afpd/status.c
	etc/afpd/volume.c: Add a new option -server_notif to specify that
	a server supports server notifications.  If this flag is not specified
	the client will poll the server every 10 seconds for directory changes.

2002-02-03  andy m <morgan@orst.edu>
	* bin/afppasswd/Makefile.am
	Added an install-exec-hook to make the afppasswd binary suid root
	after it is installed.  This lets local users change their afppasswd
	password.

2001-12-14  joe c   <marcus@marcuscom.com>
	* etc/afpd/afp_options.c, etc/afpd/afp_dsi.c, etc/afpd/globals.h:
	Add a new option to afpd called -timeout to specify the number of
	server tickles to send before killing a AFPoTCP session.
